# backend/src/main/resources/static/openapi.yaml
@@ -1183,6 +1183,12 @@ paths:
           schema:
             type: string
             format: uuid
+        - name: sourceAccountId
+          in: query
+          required: true
+          schema:
+            type: string
+            format: uuid
       responses:
         '200':
           description: Fatura paga
